--- a/src/content/css/board-game.css
+++ b/src/content/css/board-game.css
@@ -261,6 +261,25 @@
             width: calc(75vh -73.33px);
         }
     }
+
+    .board-icon :hover {
+        border: none;
+    }
+
+    .board.board-icon:hover .plant-tile{
+        animation: flash;
+        animation-timing-function: linear;
+        animation-duration: 1s;
+    }
+
+    .board.board-icon:hover .soil-tile{
+        animation: flash;
+        animation-timing-function: linear;
+        animation-delay: 0.7s;
+        animation-duration: 1s;
+    }
+
+   
     
     @media (orientation:portrait) {
         .board-game {
@@ -322,6 +341,15 @@
             opacity: 0;
         }
         to {
+            opacity: 1;
+        }
+    }
+
+    @keyframes flash {
+        50% {
+            opacity: 0;
+        }
+        100% {
             opacity: 1;
         }
     }
