--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -14,10 +14,11 @@
     --diamond-green: #66CC99;
     --diamond-black: #4D4D4D;
 }
-
+html{
+    font-family: SpaceGrotesk, sans-serif !important;
+}
 body {
     background: var(--default-background);
-    font-family: SpaceGrotesk, sans-serif;
     margin: 0;
     font-size: 18px;
 }
