continue to work on nes game

--- a/src/content/css/nes-test.css
+++ b/src/content/css/nes-test.css
@@ -21,7 +21,11 @@
 }
 
 .nes-content .monster-box .monster{
-    zoom: 3;
+    zoom:0.1;
+    animation: move;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 4s;
 }
 
 .nes-content .hero-buttons{
@@ -34,4 +38,19 @@ justify-content: space-evenly;
     border-image-outset: 1.5;
     height: 18px;
     margin: 0px;
+ }
+
+ @keyframes move{
+    0%{
+        position: relative;
+        top:0;
+    }
+    50%{
+        position: relative;
+        top: 10%;
+    }
+    100%{
+        position: relative;
+        top: 0;
+    }
  }
