--- a/src/content/css/nes-test.css
+++ b/src/content/css/nes-test.css
@@ -21,17 +21,26 @@
 }
 
 .nes-content .monster-box .monster{
-    zoom:0.1;
+    zoom:3;
     animation: move;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-duration: 4s;
 }
 
+.nes-content .monster-bars .nes-progress.is-warning.critical-hit::-webkit-progress-value {
+    background-color:red;
+}
+
 .nes-content .hero-buttons{
     width: 100%;
 display: flex;
 justify-content: space-evenly;
+}
+
+.nes-content .hero-buttons .nes-btn{
+    width: 20%;
+    font-size: 0.8em;
 }
 
 .nes-content .nes-progress{
