--- a/src/content/css/nes-test.css
+++ b/src/content/css/nes-test.css
@@ -6,23 +6,42 @@
 
 .nes-content .nes-progress {
     border-image-outset: 1.2;
-    height: 18px;
+    height: 20px;
     margin: 0px;
+    position: relative;
+}
+
+.nes-content .nes-progress::after {
+    content: attr(display);
+    position: absolute;
+    top: -3px;
+    font-size: 0.8em;
+}
+
+.nes-content .game-box .screen-wrapper {
+    background: black;
 }
 
 .nes-content .game-box .game-screen {
-    height: 420px;
+    height: 370px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: initial;
+    background: #f9f2d7;
+}
+
+.nes-container .game-screen .start-wrapper {
+    flex: 1;
+    background-color: #f9f2d7;
 }
 
 .nes-content .game-screen .start-screen {
     text-align: center;
-    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 
 .nes-content .game-screen .monster-box {
@@ -57,11 +76,7 @@
     font-size: 0.8em;
 }
 
-.nes-content .nes-progress {
-    border-image-outset: 1.5;
-    height: 18px;
-    margin: 0px;
-}
+.nes-content .nes-progress {}
 
 @keyframes move {
     0% {
@@ -88,7 +103,7 @@
 
 @media(max-width:767px) {
     .content-wrapper>.nes-container {
-        margin-top: 28px;
+        margin-top: 16px;
         padding-bottom: 0;
     }
     .nes-content .game-box {
@@ -97,10 +112,10 @@
     }
     .nes-content .nes-container {
         padding: 0.8em;
-        padding-bottom: 0;
     }
     .nes-content .game-box .game-screen {
         height: 264px;
+        padding: 0.1em;
     }
     .nes-content .hero-buttons {
         width: 100%;
@@ -114,7 +129,7 @@
         margin-top: 0em;
     }
     .nes-content .nes-progress {
-        height: 15px;
+        height: 17px;
     }
     .nes-content .game-box .monster-box .monster {
         zoom: 1;
