--- a/src/content/css/can-i-leave-washing.css
+++ b/src/content/css/can-i-leave-washing.css
@@ -3,20 +3,20 @@
 }
 
 .can-i-leave-washing p{
-    font-size: 1.2em;
+    font-size: 1.8em;
 }
 
 .can-i-leave-washing button{
-    font-size:1.2em;
 }
 
-.cloud-wrapper{
+.can-i-leave-washing .cloud-wrapper{
     width:200px;
     margin:0 auto;
     margin-top: 1.34em;
+    cursor: pointer;
   }
   
-  .cloud{
+  .can-i-leave-washing  .cloud{
     width:100%;
     height:100px;
     display:flex;
@@ -25,11 +25,11 @@
     position:relative;
   }
   
-  .cloud  > div{
+  .can-i-leave-washing .cloud  > div{
     background:#d2d7d3;
   }
   
-  .cloud .blob-one{
+  .can-i-leave-washing .cloud .blob-one{
     position:absolute;
     left:5%;
     border-radius:50% 50% 0 50%;
@@ -37,7 +37,7 @@
     width:30%;
   }
   
-  .cloud .blob-two{
+  .can-i-leave-washing .cloud .blob-two{
     position:absolute;
     border-radius:50% 50% 0 0;
     height:100%;
@@ -47,7 +47,7 @@
     align-items:center;
   }
   
-  .cloud  .blob-three{
+  .can-i-leave-washing .cloud  .blob-three{
     position:absolute;
     right:0%;
     border-radius:50% 50% 50% 0;
@@ -55,7 +55,7 @@
     width:40%;
   }
   
-  .cloud .face{
+  .can-i-leave-washing .cloud .face{
     width:60%;
     height:60%;
     display:flex;
@@ -65,34 +65,34 @@
   
   }
   
-  .cloud .eyebrow-row{
+  .can-i-leave-washing .cloud .eyebrow-row{
     height:10%;
     width:100%;
     display:flex;
     justify-content:space-between;
   }
   
-  .cloud .eyebrow{
+  .can-i-leave-washing .cloud .eyebrow{
     width:40%;
     height:100%;
     background:#2e3131;
   }
   
-  .cloud .eye-row{
+  .can-i-leave-washing .cloud .eye-row{
     height:25%;
     width:100%;
     display:flex;
     justify-content:space-around;
   }
   
-  .cloud .eye{
+  .can-i-leave-washing .cloud .eye{
     height:100%;
     width:25%;
     background:white;
      position:relative;
   }
   
-  .cloud .pupil{
+  .can-i-leave-washing .cloud .pupil{
     position: absolute;
     top:25%;
     right:25%;
@@ -101,7 +101,7 @@
     background:#2e3131;
   }
   
-  .cloud .mouth{
+  .can-i-leave-washing .cloud .mouth{
     width:75%;
     height: 10%;
     background:#2e3131;
@@ -109,7 +109,7 @@
   }
   
   
-  .searching .pupil{
+  .can-i-leave-washing .searching .pupil{
       animation-name: searching;
     animation-direction: alternate;
     animation-duration:2s;
@@ -117,7 +117,7 @@
     animation-timing-function: ease-in-out;
   }
   
-  .searching .mouth{
+  .can-i-leave-washing .searching .mouth{
      width:10%;
   }
   
@@ -126,36 +126,36 @@
      width:60%;
   }
   
-  .raining .eyebrow-row .eyebrow:last-child{
+  .can-i-leave-washing .raining .eyebrow-row .eyebrow:last-child{
      transform: rotate(-30deg);
      width:60%;
   }
   
-  .raining .eyebrow-row .eyebrow:last-child{
+  .can-i-leave-washing .raining .eyebrow-row .eyebrow:last-child{
      transform: rotate(-30deg);
      width:60%;
   }
   
-  .raining .cloud > div{
+  .can-i-leave-washing .raining .cloud > div{
      background:#6c7a89;
   }
   
-  .raining .eye{
+  .can-i-leave-washing .raining .eye{
     background:#cf000f;
   }
   
-  .raining .mouth{
+  .can-i-leave-washing .raining .mouth{
     width:40%;
     height:40%;
     border-radius:100%;
   }
   
-  .raining  .pupil{
+  .can-i-leave-washing .raining  .pupil{
     position: absolute;
     top:50%;
   }
   
-  .raining .rain-wrapper{
+  .can-i-leave-washing .raining .rain-wrapper{
     width:70%;
     height:100px;
     display:flex;
@@ -164,7 +164,7 @@
     margin:0 auto;
   }
   
-  .raining .rain-drop{
+  .can-i-leave-washing .raining .rain-drop{
     height:20%;
     width:1%;
     background:#1f3a93;
@@ -176,58 +176,53 @@
     position:relative;
   }
   
-  .raining .rain-wrapper .rain-drop:first-child{
+  .can-i-leave-washing .raining .rain-wrapper .rain-drop:first-child{
    animation-delay: 0.5s;
   }
   
-  .raining .rain-wrapper .rain-drop:nth-child(2){
+  .can-i-leave-washing .raining .rain-wrapper .rain-drop:nth-child(2){
     animation-delay: 0.1s;
   }
   
-  .raining .rain-wrapper .rain-drop:nth-child(3){
-    
-  }
-  
-  .raining .rain-wrapper .rain-drop:nth-child(4){
+  .can-i-leave-washing .raining .rain-wrapper .rain-drop:nth-child(4){
     animation-delay: 0.2s;
   }
   
-  .raining .rain-wrapper .rain-drop:nth-child(5){
+  .can-i-leave-washing .raining .rain-wrapper .rain-drop:nth-child(5){
     animation-delay: 0.3s;
   }
   
-  .raining .rain-wrapper .rain-drop:nth-child(6){
+  .can-i-leave-washing .raining .rain-wrapper .rain-drop:nth-child(6){
      animation-delay: 0.1s;
   }
-  .raining .rain-wrapper .rain-drop:nth-child(7){
+  .can-i-leave-washing .raining .rain-wrapper .rain-drop:nth-child(7){
      animation-delay: 0.4s;
   }
   
-  .raining .rain-wrapper .rain-drop:nth-child(8){
+  .can-i-leave-washing .raining .rain-wrapper .rain-drop:nth-child(8){
      animation-delay: 0.5s;
   }
   
-  .sunny .blob-one, .sunny .blob-three{
+  .can-i-leave-washing .sunny .blob-one, .sunny .blob-three{
     display:none;
   }
   
-  .sunny .blob-two{
+  .can-i-leave-washing .sunny .blob-two{
     border-radius:50%; 
     background:#ffff7e;
   }
   
-  .sunny .face{
+  .can-i-leave-washing .sunny .face{
      justify-content:space-between;
   }
   
-  .sunny .eyebrow-row{
+  .can-i-leave-washing .sunny .eyebrow-row{
     height:10%
   }
   
-  .sunny .eyebrow{
-  }
   
-  .sunny .mouth{
+  
+  .can-i-leave-washing .sunny .mouth{
     width:60%;
     height:30%;
     border-radius:0 0 50% 50%;
