--- a/src/content/css/weather-globe.css
+++ b/src/content/css/weather-globe.css
@@ -14,7 +14,7 @@
     animation-iteration-count: infinite;
     animation-duration: 40s;
 }
-.tree{
+.globe .tree{
     height: 60%;
     width: 60%;
     display: flex;
@@ -25,7 +25,7 @@
     z-index: 1;
 }
 
-.tree .tree-top,.tree .tree-body{
+.globe .tree .tree-top,.tree .tree-body{
     background-color: #1e824c;
     height: 20%;
     animation: wind-blown;
@@ -34,22 +34,22 @@
     animation-duration: 3s;
 }
 
-.tree .tree-top{
+.globe .tree .tree-top{
     width: 20%;
 }
 
-.tree .tree-body{
+.globe .tree .tree-body{
     width: 60%;
 }
 
-.tree .tree-trunk{
+.globe .tree .tree-trunk{
     background-color: #5E2C0B;
     height:40%;
     width: 20%;
     position:relative
 }
 
-.cloud{
+.globe .cloud{
     opacity: 0.8;
     top:10%;
     position: absolute;
@@ -64,50 +64,50 @@
     animation-duration: 20s;
 }
 
-.cloud-2{
+.globe .cloud-2{
     height: 15%;
     width: 45%;
     top:35%;
     left: -50%;
     animation-delay: 12s;
 }
-.cloud .cloud-top{
+.globe .cloud .cloud-top{
     background: white;
     height: 30%;
     width: 50%;
 }
 
-.cloud .cloud-bottom{
+.globe .cloud .cloud-bottom{
     background: white;
     height: 30%;
     width: 50%;
 }
 
-.cloud .cloud-body{
+.globe .cloud .cloud-body{
     background: white;
     height: 70%;
     width: 100%;
 }
 
-.cloud-2 .cloud-top{
+.globe .cloud-2 .cloud-top{
     background: white;
     height: 20%;
     width: 55%;
 }
 
-.cloud-2 .cloud-bottom{
+.globe .cloud-2 .cloud-bottom{
     background: white;
     height: 20%;
     width: 55%;
 }
 
-.cloud-2 .cloud-body{
+.globe .cloud-2 .cloud-body{
     background: white;
     height: 20%;
     width: 90%;
 }
 
-.sun{
+.globe .sun{
     background: #f0ff00;
     height: 20%;
     width:20%;
@@ -120,7 +120,7 @@
     animation-duration: 40s;
 }
 
-.moon{
+.globe .moon{
     background: #E0E0E0;
     height: 20%;
     width:20%;
@@ -134,7 +134,7 @@
     animation-delay: 20s;
 }
 
-.ground{
+.globe .ground{
     height: 10%;
     width: 100%;
     background-color:#008C31;
@@ -142,14 +142,14 @@
     z-index: 1;
 }
 
-.stars{
+.globe .stars{
     top:10%;
     position: absolute;
     height: 50%;
     width: 100%;
 }
 
-.stars .star{
+.globe .stars .star{
     background-color: white;
     height: 2%;
     width: 1%;
@@ -161,56 +161,56 @@
     opacity: 0;
 }
 
-.stars .star:first-child{
+.globe .stars .star:first-child{
     top: 0;
     right:50%;
     background: white;
     animation-delay: 1s;
 }
 
-.stars .star:nth-child(2){
+.globe .stars .star:nth-child(2){
     top: 26%;
     right:10%;
     background: white;
     animation-delay: 2s;
 }
 
-.stars .star:nth-child(3){
+.globe .stars .star:nth-child(3){
     top: 55%;
     right:20%;
     background: white;
     animation-delay: 3s;
 }
 
-.stars .star:nth-child(4){
+.globe .stars .star:nth-child(4){
     top: 30%;
     right:71%;
     background: white;
     animation-delay: 4s;
 }
 
-.stars .star:nth-child(5){
+.globe .stars .star:nth-child(5){
     top: 80%;
     right:12%;
     background: white;
     animation-delay: 5s;
 }
 
-.stars .star:nth-child(6){
+.globe .stars .star:nth-child(6){
     top: 10%;
     right:95%;
     background: white;
     animation-delay: 6s;
 }
 
-.stars .star:nth-child(7){
+.globe .stars .star:nth-child(7){
     top: 60%;
     right:90%;
     background: white;
     animation-delay: 7s;
 }
 
-.stars .star:nth-child(8){
+.globe .stars .star:nth-child(8){
     top: 20%;
     right:30%;
     background: white;
