--- a/src/content/css/experiment.css
+++ b/src/content/css/experiment.css
@@ -5,22 +5,30 @@
 }
 
 .experiments-wrapper{
+    margin:0 2em 2em 2em;
     text-align: center;
 }
 
 .experiments-wrapper .experiment {
     width: 283px;
-    height: 286px;
-    margin: 20px;
     justify-content: center;
     display: flex;
-    align-items: center;
     position: relative;
+    margin-top: 1em;
+}
+
+.experiments-wrapper h2 {
+    margin-top: 2em;
+}
+
+.experiments-wrapper .experiment.diamond-experiment {
+   align-items: center;
+   height: 200px;
 }
 
 .experiments-wrapper .diamond-holder {
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     opacity: 0.7;
     transition: 1s;
     transform: rotate(45deg);
@@ -87,6 +95,10 @@
 .experiments-wrapper .experiment:hover .nes-mario {
     bottom: 20%;
 }
+
+.experiments-wrapper  .cloud-wrapper{
+    margin: 0;
+ }
 
 .experiments-wrapper .experiment:hover .cloud  .pupil{
     animation-name: searching;
