--- a/src/content/css/nes-custom.css
+++ b/src/content/css/nes-custom.css
@@ -47,8 +47,8 @@
     display: inline;
     padding: 0;
     position: absolute;
-    left:1%;
-    top: 2%;
+    left:4%;
+    top: -1px;
     z-index: 2;
     font-size: 0.8em;
 }
@@ -130,9 +130,9 @@
 }
 
 .nes-content .hero-buttons .nes-btn {
-    width: 20%;
+    width: 22%;
     font-size: 0.6em;
-    height: 58px;
+    height: 66px;
     user-select: none;
 }
 
@@ -334,6 +334,10 @@
     }
     .nes-content .game-box .monster-box .monster {
         zoom: 0.6;
+    }
+
+    .nes-content .bar-wrapper label{
+        top: 0;
     }
 }
 
