--- a/src/content/css/main.css
+++ b/src/content/css/main.css
@@ -33,10 +33,13 @@ p {
     margin-bottom: 0;
 }
 
+.page{
+    margin-top: 3rem;
+}
+
 .margin-top-default{
     margin-top: 1rem;
 }
-
 
 .content {
     padding-top:56px; 
@@ -96,7 +99,8 @@ p {
 
 .content-wrapper {
     max-width: 1130px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0 1em;
 }
 
@@ -175,6 +179,9 @@ p {
 @media(max-width:767px) {
     body {
         font-size: 16px;
+    }
+    .page{
+        margin-top: 2rem;
     }
     .content{
         padding-top: 40px;
